src/styles/_photos.scss
.photos {
  /* Prevent vertical gaps */
  line-height: 0;
  column-count: 3;
  column-gap: 10px;
  margin-left: 10px;
  margin-right: 10px;

  & img {
    /* Just in case there are inline attributes */
    width: 100% !important;
    height: auto !important;
    border-radius: 10px;
    margin-bottom: 10px;
  }
}

@media (max-width: 800px) {
  .photos {
    column-count: 2;
  }
}
@media (max-width: 400px) {
  .photos {
    column-count: 1;
  }
}

